<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="practicaltest01.eim.systems.cs.pub.ro.practicaltest02.PracticalTest02MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/port"
            android:layout_width="148dp"
            android:layout_height="match_parent"
            android:hint="@string/server_port" />
        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_connect"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/portClient"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:hint="@string/client_port" />

        <EditText
            android:id="@+id/address"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:hint="@string/client_address" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/cityClient"
            android:layout_width="138dp"
            android:layout_height="match_parent"
            android:hint="@string/client_city" />

        <Button
            android:id="@+id/buttonWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_weather"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Spinner
            android:id="@+id/information_type_spinner"
            android:layout_width="358dp"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_row="1"
            android:entries="@array/information_types" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/weather_forecast_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10" />

    </ScrollView>

</LinearLayout>
